# meet-os.rs

./: .gitignore  .pre-commit-config.yaml  .typos.toml  Cargo.toml  Debug.toml  README.md  Rocket.skeleton.toml  config.yaml  dev.meet-os.com.service  export.sh  local.sh  meet-os.service  meetings.service
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: developer.md
.github/workflows/: ci.yml
data/events/: 1.json  1.yaml
data/groups/: 1.yaml
docs/: DEPLOY.md  DESIGN.md  DEVELOPMENT.md
sql/: remove.txt  remove_test_namespace.sql  upgrade001.txt
src/: admin.rs  cli.rs  db.rs  lib.rs  main.rs  notifications.rs  notify.rs  public.rs  test_admin.rs  test_complex.rs  test_contact_members.rs  test_db.rs  test_events.rs  test_groups.rs  test_helpers.rs  test_home.rs  test_lib.rs  test_public.rs  test_resend_email_verification.rs  test_reset_password.rs  test_simple.rs  test_static.rs  test_users.rs  tests.rs  web.rs
static/js/: meet-os.js
templates/: about.html.tera  add_event.html.tera  admin.html.tera  admin_users.html.tera  audit.html.tera  contact_members.html.tera  create_group.html.tera  edit_event.html.tera  edit_group.html.tera  edit_profile.html.tera  event.html.tera  events.html.tera  faq.html.tera  group.html.tera  groups.html.tera  index.html.tera  login.html.tera  markdown.html.tera  message.html.tera  privacy.html.tera  profile.html.tera  register.html.tera  resend_verification.html.tera  reset_password.html.tera  save_password.html.tera  search.html.tera  soc.html.tera  user.html.tera  users.html.tera
templates/incl/: admin_list_users.html.tera  footer.html.tera  google_analytics.html.tera  header.html.tera  navigation.html.tera
tests/: ext.rs  static.rs  t0.sql  test_admin.rs  test_complex.rs  test_groups.rs  test_home.rs  test_static.rs  test_users.rs  test_using_fork.rs
tests/data/events/: 1.yaml
tools/: export.sh  setup.sh  sql.sh
utilities/: Cargo.toml
utilities/src/: lib.rs
