[package]
name = "meetings"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Web application to help organize meetings."
keywords = ["web", "server", "rocket"]
categories = ["web-programming::http-server"]
readme = "README.md"
repository = "https://github.com/szabgab/meetings.rs/"
homepage = "https://meet-os.com/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
simple_logger = "4.2"
log = "0.4"
rocket = "0.5"
rocket_dyn_templates = { version = "0.1", features = ["tera"] }
sendgrid = { version = "0.19", features = ["async"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
markdown = { git = "https://github.com/wooorm/markdown-rs.git" }

[[bin]]
name = "meetings"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"

[lints.clippy]
pedantic = { priority = -1, level = "deny" }
no_effect_underscore_binding = "allow"
uninlined_format_args = "allow"
manual_string_new = "allow"
needless_raw_string_hashes = "allow"

#unwrap_used = "deny"
#expect_used = "deny"
#unwrap_or_default = "deny"

