[package]
name = "meetings"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Web application to help organize meetings."
keywords = ["web", "server", "rocket"]
categories = ["web-programming::http-server"]
readme = "README.md"
repository = "https://github.com/szabgab/meetings.rs/"
homepage = "https://meet-os.com/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
simple_logger = "4.2"
log = "0.4"
rocket = "0.5"
rocket_dyn_templates = { version = "0.1", features = ["tera"] }
sendgrid = { version = "0.19", features = ["async"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
markdown = { git = "https://github.com/wooorm/markdown-rs.git" }

[[bin]]
name = "meetings"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"

[lints.clippy]
pedantic = { priority = -1, level = "deny" }
no_effect_underscore_binding = "allow"
uninlined_format_args = "allow"
manual_string_new = "allow"
needless_raw_string_hashes = "allow"

suspicious = { priority = -1, level = "deny" }

complexity = { priority = -1, level = "deny" }

perf = { priority = -1, level = "deny" }

style = { priority = -1, level = "deny" }

restriction  = { priority = -1, level = "deny" }
single_call_fn = "allow"
str_to_string = "allow"
missing_docs_in_private_items = "allow"
shadow_same = "allow"
redundant_type_annotations = "allow"
let_underscore_must_use = "allow"
implicit_return = "allow"
unwrap_used = "allow"
use_debug = "allow"
print_stdout = "allow"
expect_used = "allow"
shadow_reuse = "allow"
unwrap_in_result = "allow"
blanket_clippy_restriction_lints = "allow" # huh?
pub_use = "allow"
single_char_lifetime_names = "allow"

cargo  = { priority = -1, level = "deny" }
multiple_crate_versions = "allow"  # see https://rust-lang.github.io/rust-clippy/master/index.html#/multiple_crate_versions