[package]
name = "meetings"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Web application to help organize meetings."
keywords = ["web", "server", "rocket"]
categories = ["web-programming::http-server"]
readme = "README.md"
repository = "https://github.com/szabgab/meet-os.rs/"
homepage = "https://meet-os.com/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
simple_logger = "4.2"
log = "0.4"
rocket = { version = "0.5", features = ["secrets", "uuid"] }
rocket_dyn_templates = { version = "0.1", features = ["tera"] }
sendgrid = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
surrealdb = "1.1"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
markdown = "1.0.0-alpha.18"
uuid = { version = "1.6", features = ["v4"] }
validator = "0.16"
regex = "1.10"
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
pbkdf2 = "0.12.2"
chrono = "0.4.38"

[[bin]]
name = "meetings"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"


workspace = { members = ["utilities"] }

[dev-dependencies]
utilities = { path = "utilities" }
tempfile = "3.12.0"
rand = "0.8.5"

[lints.clippy]
pedantic = { priority = -1, level = "deny" }
no_effect_underscore_binding = "allow" # https://github.com/rust-lang/rust-clippy/issues/12166

suspicious = { priority = -1, level = "deny" }

complexity = { priority = -1, level = "deny" }

perf = { priority = -1, level = "deny" }

style = { priority = -1, level = "deny" }

restriction  = { priority = -1, level = "deny" }
single_call_fn = "allow"
missing_docs_in_private_items = "allow"
shadow_same = "allow"
redundant_type_annotations = "allow"
let_underscore_must_use = "allow"
implicit_return = "allow"
unwrap_used = "allow"
expect_used = "allow"
shadow_reuse = "allow"
unwrap_in_result = "allow"
blanket_clippy_restriction_lints = "allow" # huh?
pub_use = "allow"
single_char_lifetime_names = "allow"
exhaustive-structs = "allow"
question_mark_used = "allow"
missing_inline_in_public_items = "allow"
missing_errors_doc = "allow"

cargo  = { priority = -1, level = "deny" }
multiple_crate_versions = "allow"  # see https://rust-lang.github.io/rust-clippy/master/index.html#/multiple_crate_versions


blocks_in_conditions = "allow" # We get some strange reports at struct definitions and not in if blocks. Let's disable this for now.
