[package]
name = "utilities"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Test utilities."
keywords = ["web", "testing"]
categories = ["web-programming::http-server"]
readme = "README.md"
repository = "https://github.com/szabgab/meetings.rs/"
homepage = "https://meet-os.com/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fork = "0.1"
nix = { version = "0.27", features = ["signal"] }
scraper = "0.18"
tempfile = "3.9"